# EdOrg

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  storage.json  tailwind.config.js
src/: main.py  scripts.py  settings.py
src/app/: __init__.py  lifespan.py
src/application/: repository.py
src/application/api/: __init__.py  index.py
src/application/api/news/: add_news_article.py  page.py
src/application/app/: __init__.py  lifespan.py
src/application/routers/: main.py
src/core/application/api/: index.py
src/core/application/api/news/: __init__.py  add_news_article.py  delete_news_article.py  edit_news_article.py
src/core/domain/: news.py
src/core/infrastructure/: settings.py  types.py
src/core/infrastructure/app/: __init__.py  lifespan.py
src/core/infrastructure/auth/: __init__.py  api.py  hash.py  setup.py
src/core/infrastructure/db/: __init__.py
src/core/infrastructure/repository/: image.py  news_article.py
src/domain/: news.py
src/infrastructure/: settings.py  types.py
src/infrastructure/auth/: __init__.py  api.py  hash.py  setup.py
src/infrastructure/db/: __init__.py  models.py  storage.json
src/infrastructure/static/css/: input.css
src/infrastructure/templates/: index.html
src/infrastructure/templates/auth/: login.html  signup.html
src/infrastructure/templates/shared/: base.html
src/infrastucture/: settings.py
src/infrastucture/db/: session.py
src/infrastucture/static/css/: header.css  output.css
src/infrastucture/templates/: index.html
src/infrastucture/templates/shared/: footer.html  header.html
src/routers/: main.py
src/static/css/: input.css  output.css
src/templates/: base.html  index.html
src/templates/auth/: login.html
src/templates/news/: add_news_article.html  edit_news_article.html
src/templates/shared/: base.html  header.html
