[tool.poetry]
name = "EdOrg"
version = "0.1.0"
description = ""
authors = ["jhartum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.10.0"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.5"
pytailwindcss = "^0.2.0"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[settings]
package-mode = false
